--- a/html.html
+++ b/html.html
@@ -33,6 +33,11 @@
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  
+  
+  <script src="js.js"></script>
+  <link href="css.css" rel="stylesheet" type="text/css" />
+  
 </head>
 
 <body id="body">
