Demonstrating a problem where the line ending isn't always drawn if there's too many elements before the target element in the dom... i can't really narrow down exactly what causes it.

--- a/html.html
+++ b/html.html
@@ -33,20 +33,32 @@
 <div id="panels">
 	<div id="leftPanel">
 		<p>
-			<strong>
+			to MAP the persons from the left to the persons to the right. Once the link is set, the same person canot have multiple sources or targets. The target can only accept one person to be linked to.
+						<strong>
 				The objective is
 			</strong>
-			to MAP the persons from the left to the persons to the right. Once the link is set, the same person canot have multiple sources or targets. The target can only accept one person to be linked to.
+
 		</p>
 	</div>
 	<div id="rightPanel">
 		<div id="dialog" title="Reset persons mapping?">
+		
+			<p>
+			<span class="ui-icon ui-icon-alert"></span>
+			<span>another span</span>
+			</p>
+		
+			<a id="getMappings" href="#">show mapping</a>
 			<p>
 				<span class="ui-icon ui-icon-alert">
 				</span>
 				Do you wish to delete all connection resetting the mapping to it's original positions?
 			</p>
 		</div>
+		
+	
+
+
 		<div id="dialogMappingResult" title="Current Mapping">
 			<p>
 				Here is a list of the current mapping:
@@ -59,9 +71,6 @@
 		</div>
 		<a id="popButton" href="#">
 			reset mapping
-		</a>
-		<a id="getMappings" href="#">
-			show mapping
 		</a>
 	</div>
 </div>
