Removing the jquery ui icon class on the element preceding the target seems to have made the problem go away. Not sure what aspect of styling on that class was causing the problem.

--- a/html.html
+++ b/html.html
@@ -44,8 +44,8 @@
 		<div id="dialog" title="Reset persons mapping?">
 		
 			<p>
-			<span class="ui-icon ui-icon-alert"></span>
-			<span>another span</span>
+			<span class="">x</span>
+			<span>x</span>
 			</p>
 		
 			<a id="getMappings" href="#">show mapping</a>
