added another element and line to the demo

--- a/html.html
+++ b/html.html
@@ -30,6 +30,9 @@
 <body id="body"> 
 <div id="svgbasics">
 </div>
+
+<div id="menu"></div>
+
 <div id="panels">
 	<div id="leftPanel">
 		<p>
@@ -48,12 +51,12 @@
 			<span>x</span>
 			</p>
 		
-			<a id="getMappings" href="#">show mapping</a>
 			<p>
 				<span class="ui-icon ui-icon-alert">
 				</span>
 				Do you wish to delete all connection resetting the mapping to it's original positions?
 			</p>
+			<a id="getMappings" href="#">show mapping</a>
 		</div>
 		
 	
