Moved scripted and dependencies to end of document.

--- a/html.html
+++ b/html.html
@@ -2,29 +2,10 @@
 <html>
 <head>  
   <meta charset=utf-8 />
-  <title>JS Bin</title>
+  <title>draw line to element demo</title>
   
-  <!-- jQuery 1.10.2 -->
-  <script src="http://cdn.jsdelivr.net/jquery/1.10.2/jquery-1.10.2.min.js"></script>
-  
-  <!-- JQuery UI 1.10.3 -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-  
-  <!-- Raphael 2.0.1 -->
-  <script class="jsbin" src="http://cdn.jsdelivr.net/raphael/2.1.0/raphael-min.js"></script>
-
-  <!-- JsRender 1.0 pre 35 (optional) -->  
-  <script src="http://cdn.jsdelivr.net/jsrender/1.0pre35/jsrender.min.js"></script>
-  
-  <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  
-  
-  <script src="js.js"></script>
   <link href="css.css" rel="stylesheet" type="text/css" />
-  
+
 </head>
 
 <body id="body"> 
@@ -77,7 +58,27 @@
 		</a>
 	</div>
 </div>
-<div class="clearfix">
+
+
 </div>
+
+
+<!-- jQuery 1.10.2 -->
+<script src="http://cdn.jsdelivr.net/jquery/1.10.2/jquery-1.10.2.min.js"></script>
+ 
+<!-- Raphael 2.0.1 -->
+<script class="jsbin" src="http://cdn.jsdelivr.net/raphael/2.1.0/raphael-min.js"></script>
+
+<!-- JsRender 1.0 pre 35 (optional) -->  
+<script src="http://cdn.jsdelivr.net/jsrender/1.0pre35/jsrender.min.js"></script>
+
+<!--[if IE]>
+ <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+
+<script src="js.js"></script>
+
+
 </body>
 </html>
