Moved drawline calls out of the JS and into the html to make the js more reusable.

--- a/html.html
+++ b/html.html
@@ -77,6 +77,13 @@
 
 <script src="js.js"></script>
 
+<script>
+svgDrawLine( $('#leftPanel'), $('#rightPanel') );
+    
+svgDrawLine( $('strong'), $('#getMappings') );
+	 
+svgDrawLine( $('#getMappings'), $('#menu')  );
+</script>
 
 </body>
 </html>
